# clickhouse-daily-reporter

./: .gitignore  CLAUDE.md  README.md  advanced_ssh_setup.sh  config.example.yaml  git_setup.sh  main.py  pyproject.toml  requirements.txt  setup.sh  setup_cron.sh  setup_venv.sh
