[project]
name = "clickhouse-reporter"
version = "1.0.0"
description = "ClickHouse Daily Reporter - automatically executes queries and generates Excel reports"
requires-python = ">=3.8"
dependencies = [
    "clickhouse-connect>=0.6.0",
    "pandas>=1.5.0",
    "PyYAML>=6.0",
    "openpyxl>=3.1.0",
]

[tool.uv]
dev-dependencies = []